<resources>
    <string name="app_name">TripTogether</string>
    <string name="search_places">Search Places...</string>
    <string name="search">Search</string>
    <string name="hi">Hi </string>
    <string name="up_coming">up coming</string>
    <string name="favorites">Favorites</string>
    <string name="profile">Profile</string>
    <string name="trips">Trips</string>
    <string name="home">Home</string>
    <string name="past">Past</string>
    <string name="upcoming">Upcoming</string>
    <string name="save_trip">Save Trip</string>
    <string name="emails_of_members_separated_by_commas">Emails of Members (separated by commas)</string>
    <string name="end_date">End Date</string>
    <string name="start_date">Start Date</string>
    <string name="trip_name">Trip Name</string>
    <string name="logout">Logout</string>
    <string name="add_new_trip">Add New Trip</string>
    <string name="start_end">Start - End</string>
    <string name="location_country">Location (Country)</string>
    <string name="country_name">Country name</string>
    <string name="members">Members: ...</string>
    <string name="choose_image">Choose Image</string>
    <string name="details">Location on Map</string>
    <string name="overviewTab">Overview</string>
    <string name="start_date_end_date">Start Date-End Date</string>
    <string name="default_amount">5</string>
    <string name="description_about_the_trip">Description about the trip</string>
    <string name="enter_the_plan">Enter the plan</string>
    <string name="documents">Documents</string>
    <string name="default_country">Italy</string>
    <string name="your_partner">Your partner</string>
    <string name="name">Name</string>
    <string name="default_role">Travel Blogger</string>
    <string name="edit_profile">Edit profile</string>
    <string name="default_trip_name">Italy Trip Plan</string>
    <string name="add_activity">Add activity</string>
    <string name="next_step">Next step</string>
    <string name="enter_time_e_g">Enter time (e.g. 10:30)</string>
    <string name="emoji_e_g">Emoji (e.g. 🎒)</string>
    <string name="activity_description">Activity description</string>
    <string name="enter">Enter</string>
    <string name="default_day">01/01/2025</string>
    <string name="default_time">08:00</string>
    <string name="emoji_default">🛶</string>
    <string name="default_plan">Lunch with friends</string>
    <string name="favorites_trips">Favorites Trips</string>
    <string name="view_calendar">View calendar</string>
    <string name="edit_or_delete">Edit / Delete</string>
    <string name="edit_friends">Remove / Add Friends</string>
    <string name="delete_friend">Delete friend</string>
    <string name="edit_friends_i">Edit Friends</string>
    <string name="add_friend">Add Friend</string>
    <string name="delete_icon">delete icon</string>
    <string name="send">Send</string>
    <string name="type_a_message">Type a message...</string>
    <string name="group_chat">Group Chat</string>
    <string name="chat">Chat</string>
    <string name="upload_document">Upload Document</string>
    <string name="shared_documents">Shared Documents</string>
    <string name="uploaded_by_user_example_com">Uploaded by user@example.com</string>
    <string name="filename_pdf">filename.pdf</string>
    <string name="images">🖼 Images</string>
    <string name="documents0">📁 Documents</string>
    <string name="back">Back</string>
    <string name="role_description">Role / Description</string>
    <string name="save">Save</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
    <string name="change_password">Change Password</string>
    <string name="profile_image">Profile Image</string>
    <string name="role">Role</string>
    <string name="upload_file_or_image">Upload File or Image</string>
    <string name="shared_images">Shared Images</string>
    <string name="next_days">Next Days</string>
    <string name="previous_days">Previous Days</string>
    <string name="backs">Back</string>
    <string name="search_results">Search Results</string>

</resources>