<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <ImageView
            android:id="@+id/ivProfileImage"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:src="@drawable/ic_user_placeholder"
            android:scaleType="centerCrop"
            android:layout_marginBottom="12dp"
            android:background="@drawable/circle_background"
            android:contentDescription="@string/profile_image" />

        <Button
            android:id="@+id/btnChooseImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/choose_image" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etFirstName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:layout_marginTop="24dp" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etLastName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/etRole"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/role_description" />

        <Button
            android:id="@+id/btnSaveProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save"
            android:layout_marginTop="32dp" />

        <Button
            android:id="@+id/btnChangePassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_password"
            android:backgroundTint="@color/blue_secondary"
            android:layout_marginTop="16dp"/>
    </LinearLayout>
</ScrollView>
