<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_background">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/default_16">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <!-- picture trip -->
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/_200dp"
                android:layout_marginBottom="@dimen/_12dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/ivTripImage"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:background="@drawable/default_trip_image" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnBack"
                    android:layout_width="@dimen/_32dp"
                    android:layout_height="@dimen/_32dp"
                    android:layout_alignParentStart="true"
                    android:layout_margin="@dimen/_12dp"
                    android:src="@drawable/ic_back" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/btnFavorite"
                    android:layout_width="@dimen/_32dp"
                    android:layout_height="@dimen/_32dp"
                    android:layout_alignParentEnd="true"
                    android:layout_margin="@dimen/_12dp"
                    android:src="@drawable/ic_fav" />
            </RelativeLayout>

            <!-- trip name + country in same label -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:background="@drawable/country_label"
                android:orientation="vertical"
                android:padding="12dp"
                android:gravity="center">

                <TextView
                    android:id="@+id/tvTheTripName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trip_name"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCountry"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/country_name"
                    android:textColor="@color/white"
                    android:textSize="14sp" />
            </LinearLayout>

            <!-- navigation tabs -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:text="@string/overviewTab"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_marginEnd="@dimen/_12dp"
                    android:textColor="@color/black"
                    android:textSize="@dimen/default_size" />

                <TextView
                    android:id="@+id/mapTab"
                    android:text="@string/details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/gray"
                    android:textSize="@dimen/default_size"
                    android:clickable="true"
                    android:focusable="true" />
            </LinearLayout>

            <!-- dates + members -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_12dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:src="@drawable/ic_calendar"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="8dp" />

                <TextView
                    android:id="@+id/tvDates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/start_date_end_date"
                    android:layout_marginEnd="@dimen/default_16" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/icUsers"
                    android:src="@drawable/ic_users"
                    android:layout_width="@dimen/_24dp"
                    android:layout_height="@dimen/_24dp"
                    android:layout_marginEnd="@dimen/default_size" />

                <TextView
                    android:id="@+id/tvMembers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_amount"
                    android:clickable="true"
                    android:focusable="true" />
            </LinearLayout>

            <!-- description -->
            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12dp"
                android:text="@string/description_about_the_trip"
                android:textColor="@color/gray"
                android:textSize="@dimen/_14sp" />

            <!-- buttons: Chat, Plan, Documents -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:weightSum="2">

                <Button
                    android:id="@+id/btnChat"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/chat"
                    android:backgroundTint="@color/blue_secondary"
                    android:textColor="@color/light_background" />

                <Button
                    android:id="@+id/btnEnterPlan"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:layout_marginStart="8dp"
                    android:text="@string/enter_the_plan"
                    android:backgroundTint="@color/blue_primary"
                    android:textColor="@color/light_background" />
            </LinearLayout>


            <Button
                android:id="@+id/btnDocuments"
                android:layout_width="@dimen/_200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="8dp"
                android:backgroundTint="@color/blue_light"
                android:text="@string/documents"
                android:textColor="@color/light_background" />


        </LinearLayout>

    </ScrollView>
</RelativeLayout>
