<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <!-- Country Name -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutCountry"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/country_name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etCountry"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>


    <!-- Trip Name -->

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/ivTripImage"
        android:layout_width="167dp"
        android:layout_height="80dp"
        android:layout_marginTop="356dp"
        android:scaleType="centerCrop"
        android:src="@drawable/default_trip_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutCountry" />

    <Button
        android:id="@+id/btnSelectImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/choose_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.524"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivTripImage" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutTripName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/trip_name"
        app:layout_constraintTop_toBottomOf="@id/layoutCountry"
        android:layout_marginTop="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etTripName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Start Date -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutStartDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/start_date"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/layoutTripName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etStartDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- End Date -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEndDate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/end_date"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/layoutStartDate"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etEndDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="false" />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Members -->

    <!-- Save Button -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutMembers"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:hint="@string/emails_of_members_separated_by_commas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutEndDate">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etMembers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnSaveTrip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="252dp"
        android:text="@string/save_trip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/layoutMembers" />

</androidx.constraintlayout.widget.ConstraintLayout>
