<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/light_background">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btnHomeFriend"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:src="@drawable/ic_home_grey"
        android:layout_gravity="end"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp" />

    <!--  -->
    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/your_partner"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/blue_primary"
        android:layout_marginBottom="@dimen/default_16" />

    <!--Main Profile-->
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:layout_marginBottom="16dp">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivMainUser"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:src="@drawable/default_user_picture"
            android:layout_marginEnd="12dp"
            android:scaleType="centerCrop"
            />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvMainName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textStyle="bold"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvMainRole"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/default_role"
                android:textColor="@color/gray" />
        </LinearLayout>

        <Button
            android:id="@+id/btnEditFriends"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit_friends"
            android:backgroundTint="@color/blue_primary"
            android:textColor="@color/white"
            android:textSize="12sp" />
    </LinearLayout>

    <!-- Friends List -->
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvFriends"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:overScrollMode="never" />


</LinearLayout>
